2010-04-02 Chris Allegretta <chrisa@asty.org>
	* files.c (do_writeout): Previous fixes should not cause a crash 
	  when saving a new file.  Discovered by Mike Frysinger <vapier@gentoo.org>.

2010-04-07 Chris Allegretta <chrisa@asty.org>
	* doc/man/nano.1,nanorc.5: Add warnings about using backup
	  mode as root due to the Dan Rosenberg security analysis.
 
2010-04-02 Chris Allegretta <chrisa@asty.org>
	* files.c (do_writeout): Expand modification check to include both the
	  original file's device ID and inode number as reasons to warn the 
          user that the file has been modified.  Also abort on writing a backup
	  file when its owner doesn't match the edited file. Based on security 
	  analysis on nano by Dan Rosenberg.

2010-03-21 Chris Allegretta <chrisa@asty.org>
	* nano.c (page_stdin et al): Don't attempt to reset/reopen the terminal
	  settings when reading stdin if it was aborted with SIGINT.  May fix Savannah
	  bug 29114 reported by  Mike Frysinger.

2010-03-21 Mike Frysinger <vapier@gentoo.org>
	* doc/syntax/c.nanorc: Add additional support for #include_next and #pragma

2010-03-21 Chris Allegretta <chrisa@asty.org>
	* move.c (do_page_up, do_page_down()): Explicitly set current_y to 0 when paging 
	  up when not in smooth scroll mode, as previous fixes would otherwise cause 
	  the cursor to not really be moved to the stop of the screen.

2010-03-07 Chris Allegretta <chrisa@asty.org>
	* configure.ac, nano.c (handle_sigwinch): Create check for whether LINES and
	  COLS can safely be redefined.  Fixes compilation issues with cygwin, and likely
	  with newer versions of ncurses, fixes Savannah bug 28984 repoted by Andy Koppe
          and Eric Oliver via mailing list.
	* winio.c (get_mouseinput) - fix stray semicolon in code, also reported in
	  bug 28984.

GNU nano 2.2.3 - 2010.02.11
2010-01-28 Chris Allegretta <chrisa@asty.org>
	* move.c (do_page_up, do_page_down): Fix for smooth mode not preserving cusor 